Bug 1877617 - Further increase fuzzing value used for stream start/seek to better support muxed streams with mismatched start times as seen on Twitter/DokiDoki/etc r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D200404