dom/media/mediasource/MediaSourceDemuxer.h
@@ -67,12 +67,10 @@ class MediaSourceDemuxer : public MediaDataDemuxer,
 
   // Largest gap allowed between muxed streams with different
   // start times. The specs suggest up to a "reasonably short" gap of
-  // one second. We conservatively choose to allow a gap up to a bit over
-  // a half-second here, which is still twice our previous effective value
-  // and should resolve embedded playback issues on Twitter, DokiDoki, etc.
+  // one second, which we use here.
   // See: https://www.w3.org/TR/media-source-2/#presentation-start-time
   static constexpr media::TimeUnit EOS_FUZZ_START =
-      media::TimeUnit::FromMicroseconds(550000);
+      media::TimeUnit::FromMicroseconds(1000000);
 
  private:
   ~MediaSourceDemuxer();
